refactoring for cmake

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+cmake-build-debug
+.idea
 # Build Files
 Jamconfig
 Jamconfig.in
@@ -5,7 +7,6 @@ aclocal.m4
 autom4te.cache/
 build/
 config.h
-config.h.in
 config.log
 config.status
 configure
